--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,8 @@ button:hover {
 
 .card-grid {
   margin-top: 40px;
+  margin-right: 20px;
+  margin-left: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
